[B]v0.1.2[/B]
...

[B]v0.1.1[/B]
Addition of History 101 graphic and menu.
SQL data handling for channel data.

[B]v0.1.0[/B]
Tweaks and fixes.
Additional graphics.

[B]v0.0.9[/B]
Additional fixes to Playing functionalities and removing the visual side of the debugging.

[B]v0.0.8[/B]
Next-Page system fixed with thanks to Shani.
Temp method with Debug usage to allow for streamkey / youtubeId catching.

[B]v0.0.7[/B]
Local Lists.
Some misc. testing and code mods.

[B]v0.0.6[/B]
Fixed next-page system again.
Site-featured streams.
Additional fixes for some of the sometimes-missing varaible(s) before playback starts.
Hardcoded Dev's Featured List returns for some.

[B]v0.0.5[/B]
...

[B]v0.0.4[/B]
Online Sepcial List(s).
Dev's Featured List changed from local list to online list.

[B]v0.0.3[/B]
Further attempts at catching the streamkey or a playable stream url.
Dev's Featured List.

[B]v0.0.2[/B]
Fixed up the next page calls again.

[B]v0.0.1[/B]
- Initial Addon

